tests/paczka1/small_fuzzy/70724972.err
Error in line 1: 8U9Pe7ARx A284 30,9
Error in line 3: v1KS9D S143 0,6
